Renamed ImageEmbed to ImageViewer. It no longer contains a Caption. That's moved up to the Player, so it can be maintained across multiple photos. It's also at the correct z-index now.

--- a/src/components/Player/styles.css
+++ b/src/components/Player/styles.css
@@ -249,3 +249,18 @@
   display: block;
   flex: 0 0 0.0625rem;
 }
+
+.footer {
+  z-index: 1;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.footer > * {
+  margin: 0;
+  height: 3rem;
+  letter-spacing: 0.0625rem;
+  animation: appear 0.5s 1s backwards;
+}
